# dci-core-sbs

./: CMakeLists.txt
include/dci/: sbs.hpp
include/dci/sbs/: api.hpp  box.hpp  owner.hpp  signal.hpp  subscription.hpp  wire.hpp
include/dci/sbs/exception/: wireNotConnected.hpp
include/dci/sbs/wire/: agg.hpp  callback.hpp  transfer.hpp
include/dci/sbs/wire/transfer/: arg.hpp  ret.hpp
src/: box.cpp  owner.cpp  subscription.cpp
src/impl/: box.cpp  box.hpp  owner.cpp  owner.hpp  subscription.cpp  subscription.hpp
test/: activate.cpp  owner.cpp  remove.cpp  transfer.cpp
